# mastering-ielts

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/core/: settings.py  urls.py
backend/scripts/: start_dev.sh  start_prod.sh
frontend/: Dockerfile  package.json  start_dev.sh
frontend/src/: App.js
frontend/src/components/Vocab/: data.jsx
nginx/dev/: Dockerfile  dev.conf
nginx/prod/: Dockerfile  prod.conf
src/: App.js  index.js
src/Redux/: store.js
src/Redux/slices/: vocabularySlice.js
src/components/Credits/: Credits.jsx
src/components/active-recall/: active-recall.jsx
src/components/vocab/: HeadMap.jsx  data.jsx
src/hook/: utils.js
